finished adding chapter 2 refs

--- a/References/references.bib
+++ b/References/references.bib
@@ -1078,3 +1078,139 @@ PMCID: PMC4016708}
 	doi = {10.1016/j.fsigen.2012.06.007},
 	url = {http://www.ncbi.nlm.nih.gov/pubmed/22749789}
 }
+
+@article{horvath2013a,
+	title = {DNA methylation age of human tissues and cell types},
+	author = {{Horvath}, {S.}},
+	year = {2013},
+	date = {2013},
+	journal = {Genome Biol},
+	volume = {14},
+	doi = {10.1186/gb-2013-14-10-r115},
+	url = {https://doi.org/10.1186/gb-2013-14-10-r115}
+}
+
+@book{kuhn2008,
+	title = {Building Predictive Models in R Using the caret Package},
+	author = {{Kuhn}, {Max}},
+	year = {2008},
+	month = {11},
+	date = {2008-11},
+	doi = {10.18637/jss.v028.i05},
+	url = {http://www.jstatsoft.org/v28/i05/},
+	note = {DOI: 10.18637/jss.v028.i05}
+}
+
+@article{friedman2010a,
+	title = {Regularization paths for generalized linear models via coordinate descent},
+	author = {{Friedman}, {J.} and {Hastie}, {T.} and {Tibshirani}, {R.}},
+	year = {2010},
+	date = {2010},
+	journal = {J Stat Softw},
+	volume = {33},
+	doi = {10.18637/jss.v033.i01},
+	url = {https://doi.org/10.18637/jss.v033.i01}
+}
+
+@article{zou2005a,
+	title = {Regularization and variable selection via the elastic net},
+	author = {{Zou}, {H.} and {Hastie}, {T.}},
+	year = {2005},
+	date = {2005},
+	journal = {J R Stat Soc B},
+	volume = {67},
+	doi = {10.1111/j.1467-9868.2005.00503.x},
+	url = {https://doi.org/10.1111/j.1467-9868.2005.00503.x}
+}
+
+@article{tibshirani2003a,
+	title = {Class prediction by nearest shrunken centroids, with applications to DNA microarrays},
+	author = {{Tibshirani}, {R.} and {Hastie}, {T.} and {Narasimhan}, {B.} and {Chu}, {G.}},
+	year = {2003},
+	date = {2003},
+	journal = {Stat Sci},
+	volume = {18},
+	doi = {10.1214/ss/1056397488},
+	url = {https://doi.org/10.1214/ss/1056397488}
+}
+
+@article{tibshirani2002,
+	title = {Diagnosis of multiple cancer types by shrunken centroids of gene expression},
+	author = {{Tibshirani}, {R.} and {Hastie}, {T.} and {Narasimhan}, {B.} and {Chu}, {G.}},
+	year = {2002},
+	date = {2002},
+	journal = {Proc Natl Acad Sci USA},
+	volume = {99},
+	doi = {10.1073/pnas.082099299},
+	url = {https://doi.org/10.1073/pnas.082099299}
+}
+
+@article{altman1992a,
+	title = {An Introduction to Kernel and Nearest-Neighbor Nonparametric Regression},
+	author = {{Altman}, {N. S.}},
+	year = {1992},
+	month = {08},
+	date = {1992-08},
+	journal = {The American Statistician},
+	pages = {175--185},
+	volume = {46},
+	number = {3},
+	doi = {10.1080/00031305.1992.10475879},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/00031305.1992.10475879}
+}
+
+@article{kuhn2008a,
+	title = {Building predictive models in R using the caret package},
+	author = {{Kuhn}, {M.}},
+	year = {2008},
+	date = {2008},
+	journal = {J Stat Softw},
+	volume = {28},
+	doi = {10.18637/jss.v028.i05},
+	url = {https://doi.org/10.18637/jss.v028.i05}
+}
+
+@article{mchugh2012,
+	title = {Interrater reliability: the kappa statistic.},
+	author = {{McHugh}, {Mary L}},
+	year = {2012},
+	date = {2012},
+	journal = {Biochemia medica},
+	pages = {276--82},
+	volume = {22},
+	number = {3},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/23092060}
+}
+
+@article{hansen2016,
+	title = {IlluminaHumanMethylation450kanno.ilmn12.hg19: Annotation for Illumina's 450k methylation arrays.},
+	author = {{Hansen}, {Kasper Daniel}},
+	year = {2016},
+	date = {2016},
+	journal = {R package version 0.6.0}
+}
+
+@article{phipson2015,
+	title = {missMethyl: an R package for analyzing data from Illumina{\textquoteright}s HumanMethylation450 platform},
+	author = {{Phipson}, {B.} and {Maksimovic}, {J.} and {Oshlack}, {A.}},
+	year = {2015},
+	date = {2015},
+	journal = {Bioinformatics.},
+	volume = {32},
+	doi = {10.1093/bioinformatics/btv560},
+	url = {https://doi.org/10.1093/bioinformatics/btv560}
+}
+
+@article{zhou2018,
+	title = {SeSAMe: reducing artifactual detection of DNA methylation by Infinium BeadChips in genomic deletions},
+	author = {{Zhou}, {Wanding} and {Triche}, {Timothy J} and {Laird}, {Peter W} and {Shen}, {Hui}},
+	year = {2018},
+	month = {07},
+	date = {2018-07},
+	journal = {Nucleic Acids Research},
+	pages = {e123--e123},
+	volume = {46},
+	number = {20},
+	doi = {10.1093/nar/gky691},
+	url = {https://academic.oup.com/nar/advance-article/doi/10.1093/nar/gky691/5061974}
+}
