--- a/Sections/09_Chapter_2.Rmd
+++ b/Sections/09_Chapter_2.Rmd
@@ -118,30 +118,9 @@ Collection of previously published placental HM450K DNA methylation data Placent
 When possible, data was downloaded as raw IDAT files (GSE75248, GSE100197, GSE100197, GSE108567, GSE74738), otherwise methylated and unmethylated intensities were utilized (GSE70453, GSE73375).\
 DNA methylation data processing All samples were analyzed using the Illumina Infinium HumanMethylation450 BeadChip array (HM450K), the most popular measure of DNAme for EWAS.
 Array data analysis was performed using R version 3.5.0.
-To allow compatibility of PlaNET with the newest Infinium MethylationEPIC BeadChip array (EPIC), the raw HM450K data (485,512 CpGs, 65 SNPs) was filtered to the 452,453 CpGs and 59 SNPs common between both platforms prior to classifier development [@zhou2017]. Because genetic variability can capture ancestry information, we omitted the common filtering step that would remove sites with probes that overlap SNPs (n = 52,116 at a minor allele frequency \> 0.05). CpGs were removed if greater than 1% of samples had poor quality signal (bead count \< 3, or a detection p-value \> 0.01; n = 14,858). The remaining poor quality measurements were replaced with imputed values using K-Nearest Neighbours from the R package impute [@hastie2018]. Cross-hybridizing (n = 41,937) [@chen2013; @price2013] and placental-specific non-variable sites (n = 86,502) [@edgar2017] were also removed, leaving 319,233 sites for classifier development. Biological sex was determined by hierarchical clustering on DNAme measured from sites on the sex chromosomes and then compared to reported sex. Samples with discordant reported and inferred sex were removed (n=3). Samples were also removed if they had a low mean inter-array correlation (\< 0.95, n = 5). Intra-array normalization methods, normal-exponential out-of-band (NOOB) [@triche2013] and beta mixture quantile normalization (BMIQ) [@teschendorff2013] were used from R packages minfi (version 1.26.2) [@aryee2014] and wateRmelon (version 1.24.0) [@pidsley2013] to normalize data. Genotyping data collection and genetic ancestry assessment In a subset of C5 (n = 27) and 10 additional samples, high density SNP array genotypes were collected. DNA samples from one site from the fetal side of each placenta were collected as previously described [@delgobbo2018a] and quality was checked using a NanoDrop ND-1000 (Thermo Scientific) as well as by electrophoresis on a 1% agarose gel. Genotyping at \~2.3 million SNPs was done on the Illumina Infinium Omni2.5-8 (Omni2.5) array at the Centre for Applied Genomics, Hospital for Sick Kids, Toronto, Canada. For inferring genetic ancestry, the data for these 37 samples was combined with a previously processed 1000 Genomes Project Omni2.5 dataset (n = 1,756) to use as reference populations [@gibbs2015; @roslin2016]. Genotypes in this combined dataset were filtered for quality (missing call rate \> 0.05, n removed = 31,604), minor allele frequency (MAF \> 0.05, n removed = 114,628), and linkage disequilibrium pruning was performed to select representative SNPs (R2 \< 0.25, n removed = 919,824) for a final dataset of 218,732 SNPs and n = 1793 samples. Genetic ancestry coefficients were estimated using the R package LEA, which utilizes sparse non-negative matrix factorization to produce similar results to model-based algorithms ADMIXTURE and STRUCTURE [@frichot2015; @alexander2009]. Cross-entropy criterion was used to assess the number of ancestral populations (Additional file 2: Figure S8) [@frichot2014]. A smaller panel of 50 ancestry-informative genotyping markers (AIMs) was collected in a subset of samples from cohorts C4 (n = 41) and C5 (n = 68). AIMs were selected based on their ability to differentiate between African, European, East Asian, and South Asian populations [@phillips2013; @phillips2007; @fondevila2013]. Results from cohort C5 have been published elsewhere [\@ \@ \@], and genotyping data was collected for cohort C4 in the same manner. Briefly, these markers were measured in placental villus DNA using the Sequenom iPlex Gold platform (Génome Québec Innovation Centre, Montréal, Canada). Genetic ancestry inferred from 50 AIMs markers was computed using multi-dimensional scaling after combining with the same 50 AIMs from the 1000 Genomes Project samples, as previously described [45]. Developing the ethnicity classifier and assessing its performance To develop and assess the performance of PlaNET we used a 'leave-one-dataset-out cross-validation' (LODOCV) approach. This approach uses four out of five datasets to develop a predictive model (training), which is then used to generate ethnicity classifications on the samples in the remaining dataset (testing). This differs from the traditional cross validation approach of randomly splitting the full dataset into training and testing. LODOCV produces more accurate estimates of classifier performance for future studies, and has been previously used for evaluating age-predictive models [34]. Each iteration of LODOCV generates dataset-specific estimates of performance (accuracy, Kappa). After all iterations, overall performance was assessed by aggregating classifications across all datasets. For fitting predictive models within LODOCV-generated training sets, we used the R package caret [68]. Several algorithms were compared: logistic regression with an elastic net penalty (GLMNET) [37, 38], nearest shrunken centroids (NSC) [35, 69], K-nearest neighbours (KNN) [39], and support vector machines (SVM) [40]. To determine optimum tuning parameters for each algorithm (e.g., 'k' number of neighbours for KNN, alpha and lambda for GLMNET), we built several models while varying the tuning parameter(s) and compared the performance of these models within each training set using repeated (n = 3) five-fold cross validation. Hyperparameter values were left as default settings in caret [68], or a grid of values for GLMNET (alpha = 0.025 -- 0.500, lambda = 0.0025 -- 0.2500). We compared the performance of these models using accuracy, positive predictive value, cohen's Kappa [70], and logLoss (a measure of classification accuracy that heavily penalizes over-confident misclassifications).
+To allow compatibility of PlaNET with the newest Infinium MethylationEPIC BeadChip array (EPIC), the raw HM450K data (485,512 CpGs, 65 SNPs) was filtered to the 452,453 CpGs and 59 SNPs common between both platforms prior to classifier development [@zhou2017]. Because genetic variability can capture ancestry information, we omitted the common filtering step that would remove sites with probes that overlap SNPs (n = 52,116 at a minor allele frequency \> 0.05). CpGs were removed if greater than 1% of samples had poor quality signal (bead count \< 3, or a detection p-value \> 0.01; n = 14,858). The remaining poor quality measurements were replaced with imputed values using K-Nearest Neighbours from the R package impute [@hastie2018]. Cross-hybridizing (n = 41,937) [@chen2013; @price2013] and placental-specific non-variable sites (n = 86,502) [@edgar2017] were also removed, leaving 319,233 sites for classifier development. Biological sex was determined by hierarchical clustering on DNAme measured from sites on the sex chromosomes and then compared to reported sex. Samples with discordant reported and inferred sex were removed (n=3). Samples were also removed if they had a low mean inter-array correlation (\< 0.95, n = 5). Intra-array normalization methods, normal-exponential out-of-band (NOOB) [@triche2013] and beta mixture quantile normalization (BMIQ) [@teschendorff2013] were used from R packages minfi (version 1.26.2) [@aryee2014] and wateRmelon (version 1.24.0) [@pidsley2013] to normalize data. Genotyping data collection and genetic ancestry assessment In a subset of C5 (n = 27) and 10 additional samples, high density SNP array genotypes were collected. DNA samples from one site from the fetal side of each placenta were collected as previously described [@delgobbo2018a] and quality was checked using a NanoDrop ND-1000 (Thermo Scientific) as well as by electrophoresis on a 1% agarose gel. Genotyping at \~2.3 million SNPs was done on the Illumina Infinium Omni2.5-8 (Omni2.5) array at the Centre for Applied Genomics, Hospital for Sick Kids, Toronto, Canada. For inferring genetic ancestry, the data for these 37 samples was combined with a previously processed 1000 Genomes Project Omni2.5 dataset (n = 1,756) to use as reference populations [@gibbs2015; @roslin2016]. Genotypes in this combined dataset were filtered for quality (missing call rate \> 0.05, n removed = 31,604), minor allele frequency (MAF \> 0.05, n removed = 114,628), and linkage disequilibrium pruning was performed to select representative SNPs (R2 \< 0.25, n removed = 919,824) for a final dataset of 218,732 SNPs and n = 1793 samples. Genetic ancestry coefficients were estimated using the R package LEA, which utilizes sparse non-negative matrix factorization to produce similar results to model-based algorithms ADMIXTURE and STRUCTURE [@frichot2015; @alexander2009]. Cross-entropy criterion was used to assess the number of ancestral populations (Additional file 2: Figure S8) [@frichot2014]. A smaller panel of 50 ancestry-informative genotyping markers (AIMs) was collected in a subset of samples from cohorts C4 (n = 41) and C5 (n = 68). AIMs were selected based on their ability to differentiate between African, European, East Asian, and South Asian populations [@phillips2013; @phillips2007; @fondevila2013]. Results from cohort C5 have been published elsewhere [@delgobbo2018], and genotyping data was collected for cohort C4 in the same manner. Briefly, these markers were measured in placental villus DNA using the Sequenom iPlex Gold platform (Génome Québec Innovation Centre, Montréal, Canada). Genetic ancestry inferred from 50 AIMs markers was computed using multi-dimensional scaling after combining with the same 50 AIMs from the 1000 Genomes Project samples, as previously described [@delgobbo2018]. Developing the ethnicity classifier and assessing its performance To develop and assess the performance of PlaNET we used a 'leave-one-dataset-out cross-validation' (LODOCV) approach. This approach uses four out of five datasets to develop a predictive model (training), which is then used to generate ethnicity classifications on the samples in the remaining dataset (testing). This differs from the traditional cross validation approach of randomly splitting the full dataset into training and testing. LODOCV produces more accurate estimates of classifier performance for future studies, and has been previously used for evaluating age-predictive models [@horvath2013a]. Each iteration of LODOCV generates dataset-specific estimates of performance (accuracy, Kappa). After all iterations, overall performance was assessed by aggregating classifications across all datasets. For fitting predictive models within LODOCV-generated training sets, we used the R package caret [@kuhn2008] Several algorithms were compared: logistic regression with an elastic net penalty (GLMNET) [@friedman2010a; @zou2005a], nearest shrunken centroids (NSC) [@tibshirani2003a; @tibshirani2002], K-nearest neighbours (KNN) [@altman1992a], and support vector machines (SVM) [@cortes1995]. To determine optimum tuning parameters for each algorithm (e.g., 'k' number of neighbours for KNN, alpha and lambda for GLMNET), we built several models while varying the tuning parameter(s) and compared the performance of these models within each training set using repeated (n = 3) five-fold cross validation. Hyperparameter values were left as default settings in caret [@kuhn2008a], or a grid of values for GLMNET (alpha = 0.025 -- 0.500, lambda = 0.0025 -- 0.2500). We compared the performance of these models using accuracy, positive predictive value, cohen's Kappa [@mchugh2012], and logLoss (a measure of classification accuracy that heavily penalizes over-confident misclassifications).
 The results from this analysis can be found in Additional file 1: Table S2, S3.
 After assessing the classifier performance using LODOCV, a final GLMNET model was fit to the entire dataset (cohorts C1-C5) using the same model fitting procedure described above and is available for use in future datasets (<https://github.com/wvictor14/planet>).
 
-Enrichment analysis The DNAme sites [see Additional file 1: Table S1] and SNPs selected to predict ethnicity in this final model (n = 1860) were used for enrichment analysis.
-For DNAme sites, we looked for enrichment for SNPs in the probe body, CpG site, and single base extension sites based on Illumina's HM450K annotation version 1.2 [71].
-We looked for enrichment for placental mQTLs [42], chromosomes and CpG islands (HG19; Additional file 2: Figure S5).
-Fisher's exact test was used for all enrichment tests using a p-value threshold of \< 0.05, and was carried out in R using the function fisher.test().
-GO and KEGG pathway analysis was done using the R package missMethyl version 3.8 [72].
-Threshold analysis We explored the use of a 'threshold function' to identify samples that are difficult to classify into discrete ethnicity groupings because of mixed ancestry.
-Because PlaNET's ethnicity classifications are associated with varying degrees of confidence (i.e., probabilities), we reasoned that a sample's most probable ethnicity classification (i.e., max(P(Asian), P(African), P(Caucasian)) would be lower with a higher degree of mixed ancestry.
-Therefore, we implemented a threshold function on PlaNET's probability outputs that classifies samples as 'Ambiguous' if the highest of the three class-specific probabilities is below a certain threshold.
-We explored several thresholds and decided on 0.75, which minimized the resulting decrease in predictive performance (Additional file 2: Figure S3).
-Comparison of methods for inferring genetic ancestry / ethnicity from HM450K data Because existing population inference methods and PlaNET use different statistical approaches to infer genetic ancestry/ethnicity (PCA-based vs predictive modeling), we compared each method based on the amount of population-associated signal in DNAme from each method-specific subset of sites.
-This was done by applying principal component analysis (PCA) to standardized beta values for HM450k sites associated with each method (Table 1) [8--10] within each cohort.
-To avoid bias, the PCs associated with PlaNET were calculated for each cohort using a classifier trained on all other cohorts (generated from LODOCV).
-To test for the amount ethnicity and genetic ancestry --associated signal in the sites corresponding to each method, we applied several simple linear regression models to estimate the amount of variance explained in PCi (i = 1, 2, 3, ..., 10) by self-reported ethnicity and genetic ancestry when available.
-To determine other factors that might affect signal in these sites, we also tested for the association between PCi and each covariate available for each cohort.
-All simple regression tests were done in R using the function lm().
-To compare PlaNET to Zhou et al. 2017's SNP-based classifier [10], we used the package R package sesame (version 1.1.0) [73] to obtain SNP-based ethnicity classifications for samples with idats available (cohorts C3, C4, and C5).
-Application of PlaNET to previous EWAS To demonstrate application of PlaNET, we downloaded placental HM450K DNAme datasets GSE98224, GSE100197, and GSE71678.
-We note that GSE100197 and GSE98224 overlap cohorts C4 and C5, respectively.
-To apply PlaNET to obtain ethnicity information, raw data was downloaded from GEO in the form of IDATs and loaded into R using minfi (version 1.26.2).
-Both NOOB and BMIQ normalization were applied before applying PlaNET.
-The R package limma (version 3.36.2) was used to test for differentially methylated sites.
-For GSE98224 and GSE100197, the processed DNAme data was used, and statistical thresholds were chosen the same as the published analysis [21].
+Enrichment analysis The DNAme sites [see Additional file 1: Table S1] and SNPs selected to predict ethnicity in this final model (n = 1860) were used for enrichment analysis. For DNAme sites, we looked for enrichment for SNPs in the probe body, CpG site, and single base extension sites based on Illumina's HM450K annotation version 1.2 [@hansen2016]. We looked for enrichment for placental mQTLs [@delahaye2018], chromosomes and CpG islands (HG19; Additional file 2: Figure S5). Fisher's exact test was used for all enrichment tests using a p-value threshold of \< 0.05, and was carried out in R using the function fisher.test(). GO and KEGG pathway analysis was done using the R package missMethyl version 3.8 [@phipson2015]. Threshold analysis We explored the use of a 'threshold function' to identify samples that are difficult to classify into discrete ethnicity groupings because of mixed ancestry. Because PlaNET's ethnicity classifications are associated with varying degrees of confidence (i.e., probabilities), we reasoned that a sample's most probable ethnicity classification (i.e., max(P(Asian), P(African), P(Caucasian)) would be lower with a higher degree of mixed ancestry. Therefore, we implemented a threshold function on PlaNET's probability outputs that classifies samples as 'Ambiguous' if the highest of the three class-specific probabilities is below a certain threshold. We explored several thresholds and decided on 0.75, which minimized the resulting decrease in predictive performance (Additional file 2: Figure S3). Comparison of methods for inferring genetic ancestry / ethnicity from HM450K data Because existing population inference methods and PlaNET use different statistical approaches to infer genetic ancestry/ethnicity (PCA-based vs predictive modeling), we compared each method based on the amount of population-associated signal in DNAme from each method-specific subset of sites. This was done by applying principal component analysis (PCA) to standardized beta values for HM450k sites associated with each method (Table 1) [@barfield2014; @rahmani2017; @zhou2017] within each cohort. To avoid bias, the PCs associated with PlaNET were calculated for each cohort using a classifier trained on all other cohorts (generated from LODOCV). To test for the amount ethnicity and genetic ancestry --associated signal in the sites corresponding to each method, we applied several simple linear regression models to estimate the amount of variance explained in PCi (i = 1, 2, 3, ..., 10) by self-reported ethnicity and genetic ancestry when available. To determine other factors that might affect signal in these sites, we also tested for the association between PCi and each covariate available for each cohort. All simple regression tests were done in R using the function lm(). To compare PlaNET to Zhou et al. 2017's SNP-based classifier [@zhou2017], we used the package R package sesame (version 1.1.0) [@zhou2018] to obtain SNP-based ethnicity classifications for samples with idats available (cohorts C3, C4, and C5). Application of PlaNET to previous EWAS To demonstrate application of PlaNET, we downloaded placental HM450K DNAme datasets GSE98224, GSE100197, and GSE71678. We note that GSE100197 and GSE98224 overlap cohorts C4 and C5, respectively. To apply PlaNET to obtain ethnicity information, raw data was downloaded from GEO in the form of IDATs and loaded into R using minfi (version 1.26.2). Both NOOB and BMIQ normalization were applied before applying PlaNET. The R package limma (version 3.36.2) was used to test for differentially methylated sites. For GSE98224 and GSE100197, the processed DNAme data was used, and statistical thresholds were chosen the same as the published analysis [@wilson2018].
 For enrichment analysis, differentially methylated CpGs were inputted into the gometh function from the R package missMethyl (version 1.16.0) using all filtered sites as background, and default settings.
